Working with DOM manipulation

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,9 @@
         <h1>Tweetcount</h1>
         <p>Twitter was already bad, but now you know <em>exactly</em> how bad it is!</p>
 
+        <main class="content">
+        </main>
+
         <script src="https://code.jquery.com/jquery-2.0.3.min.js"></script>
         <script src="javascripts/app.js"></script>
     </body>
